--- a/style.css
+++ b/style.css
@@ -97,3 +97,12 @@ button:hover {
     padding: 15px;
   }
 }
+
+.imagen{
+  transform: scale(var(--escala, 1));
+  transition: transform 0.25s;
+}
+.imagen:hover{
+  --escala: 1.2;
+  cursor:pointer;
+}
